// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`renders with props 1`] = `
<Layout
  entries={
    Array [
      Object {},
      Object {},
    ]
  }
  loadingEntries={false}
  transaction={Object {}}
/>
`;

exports[`test renders with props 1`] = `
<Layout
  entries={
    Array [
      Object {},
      Object {},
    ]
  }
  loadingEntries={false}
  transaction={Object {}} />
`;
